--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
   display: flex;
   flex-wrap: wrap;
   border: 3px solid black;
+  border-radius: 3px;
 }
 
 .cell {
@@ -75,42 +76,47 @@
   display: flex;
 
 }
-.lost img {
-  height: 30px;
-  width: 30px;
-}
 .kingIsUnderAttack {
   background-color: #a42a2a;
 }
 .timer {
   margin: 5px 10px;
   text-align: center;
+  width: 128px;
 }
 .timerChildren {
   background-color: #769656;
   border: black solid 3px;
-  margin: 8px 0px;
+  margin: 10px 0px;
+  border-radius: 7px;
+}
+.timerSpan {
+  height: 40px;
+  line-height: 150%;
+  font-size: 26px;
 }
 .timerChildren:nth-last-child(1) {
-  background-color: #769656;
+  color: white;
   border: white solid 3px;
-  margin: 8px 0px;
 }
 .restartBtn {
   text-decoration: none;
-  background-color: black;
+  background-color: #85A94E;
   color: white;
-  border: solid white 1px;
+  /*border: solid black 3px;*/
   cursor: pointer;
-  padding: 6px 4px;
+  padding: 7px 4px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: bold;
+  border-radius: 7px;
+  width: 128px;
 }
 .nameFlex {
   display: flex;
   background-color: #769656;
   border: solid black 3px;
+  border-radius: 10px;
   width: 99%;
 }
 
@@ -118,7 +124,7 @@
  margin: 0px 6px;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  font-weight: bold;
- font-size: 16px;
+ font-size: 18px;
 }
 .popup {
   position: fixed;
@@ -133,27 +139,39 @@
   bottom: 1px;
 }
 .popupBox {
-  position: relative;
-  width: 17%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 270px;
+  height: 200px;
   min-height: 220px;
-  background-color: #666463;
-  box-shadow: 3px 3px rgba(102,100,99,35%);
+  background-color: #edeaea;
   border-radius: 1rem;
   z-index: 101;
   text-align: center;
   color: white;
 }
 .popupTitle {
-  margin: 12px 7px 0 7px;
+  /*margin: 12px 7px 0 7px;*/
+  font-size: 2.1rem;
+  border-radius: 1rem 1rem 0 0;
+  height: 30%;
+  font-weight: 800;
+  background-color: #85A94E;
+
+  /*font-family: "Montserrat",sans-serif;*/
 }
 .popupClose {
   position: relative;
   font-size: 16px;
   font-weight: bold;
-  background-color: black;
+  background-color: #85A94E;
   border: white solid 1px;
+  border-radius: 10px;
   padding: 5px;
-  margin-top: 40px;
+  margin: 0 28% 30px ;
+  width: 120px;
+  height: 40px;
   color: white;
   cursor: pointer;
 }
@@ -209,25 +227,41 @@
   color: #7ca95d;
 }
 .movesRow {
-  display: flex;
-  justify-content: space-between;
+  /*display: flex;*/
+  /*justify-content: space-between;*/
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 40px;
+  grid-row-gap: 0px;
   color: white;
   padding: 2px 8px 0 6px;
   text-align: start ;
   border-bottom: white 2px dashed;
   background-color: #769656;
+  height: 28px;
+}
+.movesRow:nth-last-child(1) {
+  border-radius: 0 0 0 6px;
+}
+.historyContainer {
+  display: flex;
+  align-items: center;
 }
 .historyIcon {
-  width: 16px;
-  height: 16px;
+  width: 24px;
+  height: 24px;
+}
+.historySpan {
+  font-size: 20px;
 }
 .movesClosingDiv {
   padding-top: 20px;
   border-top: solid 2px white;
 }
 .movesContainer {
-  /*overflow-y:scroll;*/
   max-height: 469px;
+  padding: 0 0 1px 0;
 }
 ::-webkit-scrollbar {
   width: 20px;
