--- a/src/App.css
+++ b/src/App.css
@@ -153,24 +153,27 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 270px;
-  height: 200px;
+  width: 280px;
+  height: 240px;
   min-height: 220px;
   background-color: #edeaea;
   border-radius: 1rem;
   z-index: 101;
   text-align: center;
   color: white;
+  box-shadow: 0 0 14px rgba(0,0,0,0.75);
+}
+.popupHeader {
+  height: 90px;
+  border-radius: 1rem 1rem 0 0;
+  background-color: #85A94E;
 }
 .popupTitle {
-  /*margin: 12px 7px 0 7px;*/
   font-size: 2.1rem;
-  border-radius: 1rem 1rem 0 0;
-  height: 30%;
   font-weight: 800;
-  background-color: #85A94E;
+}
+.popupSubTitle {
 
-  /*font-family: "Montserrat",sans-serif;*/
 }
 .popupClose {
   position: relative;
