--- a/src/App.css
+++ b/src/App.css
@@ -131,6 +131,11 @@
   border-radius: 10px;
   width: 99%;
 }
+.nameImg {
+  width: 54px;
+  height: 54px;
+  border-radius: 10px 0 0 10px;
+}
 
 .nameSpan {
  margin: 0px 6px;
@@ -209,13 +214,16 @@
 }
 .notationLetter {
   position: absolute;
-  top: 48px;
-  left: 59px;
+  font-size: 17px;
+  right: 6%;
+  bottom: 3%;
+
 }
 .notationNumber {
   position: absolute;
-  bottom: 48px;
-  right: 59px;
+  font-size: 17px;
+  top: 6%;
+  left: 4%;
 }
 .notationColorBlack {
   color: #7ca95d;
@@ -238,6 +246,7 @@
   border-bottom: white 2px dashed;
   background-color: #769656;
   height: 28px;
+  align-items: center;
 }
 
 .historyContainer {
@@ -259,6 +268,102 @@
   max-height: 469px;
   padding: 0 0 1px 0;
 }
+@media (max-width: 480px) {
+  .app {
+    /*width: 100vw;*/
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #51504D;
+  }
+  .popup {
+    right: 0px;
+  }
+  .timer {
+    display: block;
+    margin-top: 10px;
+    text-align: center;
+    width: 128px;
+  }
+  .board {
+    width: calc(46px * 8);
+    height: calc(46px * 8);
+    margin: 1px;
+  }
+  .cell {
+    width: 46px;
+    height: 46px;
+  }
+  .cell img {
+    width: 41px;
+    height: 41px;
+  }
+  .available{
+    height: 13px;
+    width: 13px;
+  }
+
+  .notationLetter {
+    font-size: 14px;
+  }
+  .notationNumber {
+    font-size: 14px;
+  }
+
+  .nameFlex {
+    width: 98%;
+    height: 46px;
+  }
+  .nameImg {
+    height: 46px;
+    width: 49px;
+  }
+  .nameSpan{
+    font-size: 15px;
+  }
+
+  .historyMainBlock {
+    min-height: 200px;
+    min-width: 120px;
+    margin-left: 7px;
+    background-color: #41403E;
+    border-radius: 7px;
+  }
+  .turnHistoryLabel {
+    color: white;
+    text-align: center;
+    margin-top: 4px;
+  }
+
+  .hrTurnHistory {
+    height : 2px;
+    background-color: white;
+    margin-top: 4px;
+  }
+  .movesRow {
+    padding: 2px 3px 0 6px;
+    grid-column-gap: 2px;
+
+  }
+  .historySpan {
+    font-size: 15px;
+    display: inline-block;
+    /*width: 10px;*/
+  }
+  .historyIcon{
+    width: 20px;
+    height: 20px;
+  }
+  .turnHistoryLabel {
+    font-size: 15px;
+  }
+
+}
+
+
+
 ::-webkit-scrollbar {
   width: 20px;
   background-color: white;
